--- a/style-r.css
+++ b/style-r.css
@@ -91,7 +91,7 @@ input[type="password"] {
   background-color: #fff;
 }
 
-input[type="password"]:focus {
+.form-1 input[type="password"]:focus {
   background-color: #fff;
 }
 
