--- a/style-l.css
+++ b/style-l.css
@@ -35,6 +35,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   color: #fff;
+  width: 400px;
 }
 
 /* اینجا تگ هدره داخل کلاس باکس رو سلکت کردم تا صفت هایی بهش نسبت بدم */
@@ -60,6 +61,7 @@ body {
   flex-direction: column;
   justify-content: center;
   padding: 20px;
+  width: 100%;
 }
 
 /* با استفاده از کلاس فرم و صدا زدن لیبل چیدمان لیبل هارو کنترل کردم */
