--- a/style-r.css
+++ b/style-r.css
@@ -100,7 +100,7 @@ input[type="password"] {
   background-color: #fff;
 }
 
-.form-1 input[type="password"]:focus {
+input[type="password"]:focus {
   background-color: #fff;
 }
 
